samples/_failures_safe/1761537349_8db10f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cba8f238.c: In function ‘main’:
./samples/SAFE/__tmp_cba8f238.c:140:5: error: expected declaration or statement at end of input
  140 |     if (mat2.data == NULL) {
      |     ^~
./samples/SAFE/__tmp_cba8f238.c:140:5: error: expected declaration or statement at end of input
